--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <h1>Hello Vue3</h1>
 
     <div id="app">
-        
+        <h2>I am the template now</h2>
+        <p>{{title}} - {{author}} - {{age}}</p>
+        <button @click="age++">Increase age</button>
+        <button @click="age--">Decrease age</button>
+        <div @click="changeTitle('Oathbringer')">Change book title</div>
     </div>
 
     <script src="app.js"></script>
