--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
     <h1>Hello Vue3</h1>
 
     <div id="app">
-        <h2>I am the template now</h2>
-        <p>{{title}} - {{author}} - {{age}}</p>
-        <button @click="age++">Increase age</button>
-        <button @click="age--">Decrease age</button>
-        <div @click="changeTitle('Oathbringer')">Change book title</div>
+        <div v-if="showBooks">
+            <p>{{title}} - {{author}} - {{age}}</p>
+        </div>
+
+        <button @click="toggleShowBooks">
+            <span v-if="showBooks">Hide Books</span>
+            <span v-else>Show Books</span>
+        </button>
+
+        <div v-show="showBooks">Currently showing books</div>
     </div>
 
     <script src="app.js"></script>
